<resources>
    <string name="app_name">Conflux-CBS</string>
    <string name="datatables">Datatables</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="group_name">Group Name</string>
    <string name="enter_group_name" translatable="false">Group Name *</string>
    <string name="staff_name">Staff Name</string>
    <string name="level_name">Level Name</string>
    <string name="offline">Offline *</string>
    <string name="client_search_hint">enter client name or ID</string>
    <string name="search_results">Search Results</string>
    <string name="total">Total</string>
    <string name="client_name">Client Name</string>
    <string name="client">Client</string>
    <string name="manage_clients" translatable="false">Manage Clients</string>
    <string name="save">Save</string>
    <string name="confirm_delete_client_image">Are you sure you want to delete this client\'s image?</string>
    <string name="default_instance_url" translatable="false">demo.openmf.org</string>
    <string name="review_transaction">Review Transaction</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="payment_type">Payment Type</string>
    <string name="conflux_instance_domain">Conflux-CBS Instance Domain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mifos" translatable="false">Conflux-CBS</string>
    <string name="full_name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="external_id">External ID</string>
    <string name="activation_date">Activation Date</string>
    <string name="office">Office</string>
    <string name="group">Groups</string>
    <string name="cancel">Cancel</string>
    <string name="review_payment">Review Payment</string>
    <string name="center_name">Center Name</string>
    <string name="center_id">Center Id</string>
    <string name="create_client" translatable="false">Create Client</string>
    <string name="staff_id">Staff Id</string>
    <string name="office_id">Office Id</string>
    <string name="id">ID</string>
    <string name="transactions">Transactions</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="file_name">File Name</string>
    <string name="file_location">Location</string>
    <string name="documents">Documents</string>
    <string name="collection_sheet">Collection Sheet</string>
    <string name="title_activity_generate_collection_sheet" translatable="false">GenerateCollectionSheet</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="center">Center</string>
    <string name="generate_collection_sheet">Generate Collection Sheet</string>
    <string name="clear_data">Clear Data</string>
    <string name="branch_id">Branch Id</string>
    <string name="cgt" translatable="false">CGT</string>
    <string name="create_group" translatable="false">Create New Group</string>
    <string name="add_new_client" translatable="false">Create New Client</string>
    <string name="mange_clients" translatable="false">Manage Clients</string>
    <string name="update_changes" translatable="false">Update the Changes</string>
    <string name="transfer_client" translatable="false">Transfer Client</string>
    <string name="select_client_to_transfer" translatable="false">Select Client(s) To Transfer</string>
    <string name="home_fragment" translatable="false">Home Fragment</string>
    <string name="active">Active</string>
    <string name="inactive">InActive</string>
    <string name="loan_officer">Loan Officer</string>
    <string name="loan_cycle">Loan Cycle</string>
    <string name="loan_status">Status</string>
    <string name="loan_in_arrears">In Arrears</string>
    <string name="loan_id">Loan ID</string>
    <string name="loan_account_id">Account ID</string>
    <string name="loan_account_status_id">Account Status ID</string>
    <string name="loan_product_short_name">Product Short Name</string>
    <string name="loan_amount_disbursed">Amount Disbursed</string>
    <string name="loan_principal_due">Principal Due</string>
    <string name="loan_principal_paid">Principal Paid</string>
    <string name="loan_interest_due">Interest Due</string>
    <string name="loan_interest_paid">Interest Paid</string>
    <string name="loan_charges_due">Charges Due</string>
    <string name="loan_total_due">Total Due</string>
    <string name="summary">Summary</string>
    <string name="loan">Loan</string>
    <string name="amount_paid">Amt. Paid</string>
    <string name="balance">Balance</string>
    <string name="loan_principal">Principal</string>
    <string name="loan_interest">Interest</string>
    <string name="loan_fees">Fees</string>
    <string name="loan_penalty">Penalty</string>
    <string name="loan_amount_due">Amount Due</string>
    <string name="loan_repayment_date">Repayment Date</string>
    <string name="additional_payment">Additional Payment</string>
    <string name="break_down">Break Down</string>
    <string name="loanAccounts">Loan Accounts</string>
    <string name="loanAccountSummary">Loan Account Summary</string>
    <string name="loan_repayment_schedule">Loan Repayment Schedule</string>
    <string name="loan_rejected_message">Loan was Rejected</string>
    <string name="repayment">Repayment</string>
    <string name="complete">Complete</string>
    <string name="pending">Pending</string>
    <string name="overdue">Overdue</string>
    <string name="process_loan_transaction">Process Loan Transaction</string>
    <string name="savings_account_balance">Account Balance</string>
    <string name="savings_total_deposits">Total Deposits</string>
    <string name="savings_total_withdrawals">Total Withdrawals</string>
    <string name="savings_make_withdrawal">Make Withdrawal</string>
    <string name="savings_make_deposit">Make Deposit</string>
    <string name="savingAccounts">Savings Accounts</string>
    <string name="savingsAccount">Savings Account</string>
    <string name="recurringAccount">Recurring Accounts</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="savingsAccountSummary">Savings Account Summary</string>
    <string name="recurringAccountSummary">Recurring Account Summary</string>
    <string name="savings_transaction_detail">Transaction Id : %1$d , Running Balance : %2$f</string>
    <string name="title_activity_dash_board" translatable="false">DashBoardActivity</string>
    <string name="title_activity_client" translatable="false">ClientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="action_save_location">Save location</string>
    <string name="loan_disbursement_date">Disbursement Date</string>
    <string name="savings_interest_earned">Interest Earned</string>
    <string name="sync">Sync</string>
    <string name="enter_center_id">Center Id</string>
    <string name="tap_to_select_date">Tap to select date</string>
    <string name="title_center_list">Groups</string>
    <string name="title_center_detail">Center Detail</string>
    <string name="title_activity_centers">Centers</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="center_list">Center List</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="type">Type</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Click to Choose File</string>
    <string name="download">Download</string>
    <string name="remove">Remove</string>
    <string name="identifiers">Identifiers</string>
    <string name="add_new">Add New</string>
    <string name="error_login_failed">Please try again, your credentials are not valid</string>
    <string name="message_no_identifiers_available">No Identifiers available for this client</string>
    <string name="message_field_required"> is mandatory and cannot be left blank</string>
    <string name="upload_document">Upload Document</string>
    <string name="uploaded_successfully">%1$s Uploaded Successfully</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="error_request_timed_out">Request Timed Out</string>
    <string name="error_unknown">There was some error processing your request.</string>
    <string name="error_save_location_not_available">Location Unavailable, Please try again later!</string>
    <string name="list_all_clients">Client List</string>
    <string name="error_invalid_amount">Invalid Amount Entered</string>
    <string name="error_select_office">Please Select an Office</string>
    <string name="error_select_staff">Please Select a Staff</string>
    <string name="error_select_center">Please Select a Center</string>
    <string name="error_client_inactive">Client Inactive</string>
    <string name="error_select_parent">Please Select an Parent</string>
    <string name="error_select_dependent">Please Select an Dependent</string>
    <string name="error_select_inocme">Please Select an IncomeType</string>
    <string name="error_select_source">Please Select an SourceOfIncome</string>
    <string name="error_select_expenses">Please Select an Expenses</string>
    <string name="spinner_office">Select Office</string>
    <string name="spinner_parent">Select Parent</string>
    <string name="spinner_dependent">Select Dependent</string>
    <string name="spinner_income">Select Income</string>
    <string name="spinner_source_of_income">Select SourceOfIncome</string>
    <string name="spinner_expenses">Select Expenses</string>
    <string name="spinner_staff">Select Loan Officer</string>
    <string name="spinner_staff_1" translatable="false">Select Staff 1</string>
    <string name="spinner_staff_2" translatable="false">Select Staff 2</string>
    <string name="spinner_center">Select Center</string>
    <string name="spinner_group">Select Group</string>
    <string name="total_due">Total Due</string>
    <string name="refresh">Refresh</string>
    <string name="error_login_again">Please login to continue</string>
    <string name="default_port" translatable="false">80</string>
    <string name="port">Port</string>
    <string name="default_tenant" translatable="false">default</string>
    <string name="tenant_identifier">Tenant Identifier</string>
    <string name="dashboard">Conflux-CBS</string>
    <string name="menu_take_photo">Take new photo</string>
    <string name="menu_remove_photo">Remove photo</string>
    <string name="toast_welcome">Welcome</string>
    <string name="client_image_updated">Client image updated</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="new_text">New Text</string>
    <string name="small_text">Small Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="large_text">Large Text</string>
    <string name="product_name">Product Name</string>
    <string name="valid">Valid</string>
    <string name="error_should_contain_only" translatable="false">should contain only</string>
    <string name="No_of_loans">No. Of Loans</string>
    <string name="indebtedness">Indebtedness</string>
    <string name="No_of_MIFs">No. Of MIFs</string>
    <string name="arrears">Arrears</string>
    <string name="office_name">Office *</string>
    <string name="submission_data">Submitted On</string>
    <string name="officeId" translatable="false">Select Office *</string>
    <string name="centerId" translatable="false">Select Center</string>
    <string name="staffId" translatable="false">Select Staff</string>
    <string name="group_name_text" translatable="false">Group Name *</string>
    <string name="group_activate">Activate Group</string>
</resources>