<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mifos.mifosxdroid.online.GenerateCollectionSheet$PlaceholderFragment">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/office_name"
            style="@style/FormLabel"
            android:id="@+id/label_branch_office"
            android:layout_weight="1"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="?android:attr/spinnerDropDownItemStyle"
            android:background="@drawable/spinner_bg"
            android:id="@+id/sp_branch_offices"
            android:paddingRight="20dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/meeting_date"
            style="@style/FormLabel"
            android:layout_weight="1"
            android:id="@+id/label_meeting_date" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            style="@style/FormLabel"
            android:id="@+id/et_meeting_date" />
        <ImageButton
            android:id="@+id/edit_meeting_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:background="#00ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/staff_name"
          style="@style/FormLabel"
            android:layout_weight="1"
            android:id="@+id/label_staff" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_loan_officers"
            android:background="@drawable/spinner_bg"
            android:paddingRight="20dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/center"
          style="@style/FormLabel"
            android:layout_weight="1"
            android:id="@+id/label_center_name" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_centers"
            android:background="@drawable/spinner_bg"
            android:paddingRight="20dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:layout_weight="1"
           style="@style/FormLabel"
            android:id="@+id/label_group" />

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_bg"
            android:layout_weight="1"
            android:paddingRight="20dp"
            android:id="@+id/sp_groups" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_collection_sheet"
        android:id="@+id/bt_generate_collection_sheet"
        android:layout_marginBottom="8dp"
        style="@style/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
