<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mifos.mifosxdroid.fragments.CreateGroupFragment"
    android:fillViewport="false"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:id="@+id/ll_officeId">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/officeId"
                android:paddingRight="10dp"
                android:textStyle="bold"
                android:gravity="left"
                android:id="@+id/tv_officeId"
                android:layout_gravity="center_horizontal|center_vertical"/>
          <!--  <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>-->
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:layout_weight="1.3"
                android:dropDownWidth="500dp"
                android:paddingRight="20dp"
                android:prompt="@string/officeId"
                android:id="@+id/sp_offices" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/ll_officeId"
            android:id="@+id/ll_centerId">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/centerId"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:gravity="left"
                android:id="@+id/tv_centerId"
                android:layout_gravity="center_horizontal|center_vertical"/>
           <!-- <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>-->
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:layout_weight="1.3"
                android:paddingRight="20dp"
                android:dropDownWidth="500dp"
                android:prompt="@string/officeId"
                android:id="@+id/sp_centers" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/ll_centerId"
            android:id="@+id/ll_groupName">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/group_name_text"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:gravity="left"
                android:id="@+id/tv_groupName"
                android:layout_gravity="center_horizontal|center_vertical"/>
          <!--  <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>-->
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_textbox_style"
                android:layout_weight="1.3"
                android:padding="10dp"
                android:textSize="15sp"
                android:prompt="@string/group_name"
                android:id="@+id/et_groupName" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/ll_groupName"
            android:id="@+id/ll_staffId">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/staffId"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:gravity="left"
                android:id="@+id/tv_staff"
                android:layout_gravity="center_horizontal|center_vertical"/>
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>-->
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:layout_weight="1.3"
                android:paddingRight="20dp"
                android:dropDownWidth="500dp"
                android:prompt="@string/staffId"
                android:id="@+id/sp_staffs" />
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_staffId"
            android:id="@+id/chk_bx_activate">
            <TableRow>
                <CheckBox
                    android:id="@+id/chk_bx_active_group_status"
                    android:layout_width="276dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:checked="false"
                    android:paddingTop="10dp"
                    android:text="@string/group_activate"
                    android:gravity="start"/>
            </TableRow>
            <TableRow>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/line_active"
                    android:layout_weight="1"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tv_active_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="10dp"
                        android:textSize="15sp" />
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:paddingLeft="6dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_edit_active_date"
                        android:background="#00ffffff"
                        />
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:layout_below="@id/chk_bx_activate"
            android:id="@+id/ll_externalId">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/external_id"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:gravity="left"
                android:id="@+id/tv_externalId"
                android:layout_gravity="center_horizontal|center_vertical"/>
            <!--<TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text=":"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal|center_vertical"/>-->
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_textbox_style"
                android:layout_weight="1.3"
                android:padding="10dp"
                android:textSize="15sp"
                android:prompt="@string/group_name"
                android:id="@+id/et_externalId" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_externalId"
            android:layout_marginTop="5dp"
            android:id="@+id/ll_submitted_on">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submission_data"
                    android:paddingRight="10dp"
                    android:gravity="left"
                    android:textStyle="bold"
                    android:id="@+id/tv_center_submission_date"
                    android:layout_weight="0.7"/>
                <!--<TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:gravity="center"
                    android:layout_weight="0.1"/>-->

                <TextView
                    android:padding="10dp"
                    android:layout_weight="1.1"
                    android:layout_width="0dp"
                    android:textSize="15sp"
                    android:text="Submitted date"
                    android:background="@drawable/text_box_border"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_center_submission_date"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_edit_submission_date"
                    android:background="#00ffffff"
                    />
        </LinearLayout>
        <Button
            android:layout_width="fill_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:id="@+id/btn_submit"
            android:layout_marginTop="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_below="@id/ll_submitted_on"
            android:text="Submit"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</ScrollView>
